assembly/ja_compiler/build/y.output
Grammar

    0 $accept: fn_declaration $end

    1 fn_declaration: IDENTIFIER '(' param_list ')' ':' expr

    2 param_list: /* empty */
    3           | IDENTIFIER
    4           | param_list ',' IDENTIFIER

    5 expr: additive_expr

    6 additive_expr: mult_expr
    7              | additive_expr '+' mult_expr
    8              | additive_expr '-' mult_expr

    9 mult_expr: unary_expr
   10          | mult_expr '*' unary_expr

   11 unary_expr: primary_expr
   12           | '!' primary_expr

   13 primary_expr: LITERAL
   14             | IDENTIFIER
   15             | '(' expr ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 12
'(' (40) 1 15
')' (41) 1 15
'*' (42) 10
'+' (43) 7
',' (44) 4
'-' (45) 8
':' (58) 1
error (256)
IDENTIFIER (258) 1 3 4 14
LITERAL (259) 13


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
fn_declaration (14)
    on left: 1, on right: 0
param_list (15)
    on left: 2 3 4, on right: 1 4
expr (16)
    on left: 5, on right: 1 15
additive_expr (17)
    on left: 6 7 8, on right: 5 7 8
mult_expr (18)
    on left: 9 10, on right: 6 7 8 10
unary_expr (19)
    on left: 11 12, on right: 9 10
primary_expr (20)
    on left: 13 14 15, on right: 11 12


state 0

    0 $accept: . fn_declaration $end

    IDENTIFIER  shift, and go to state 1

    fn_declaration  go to state 2


state 1

    1 fn_declaration: IDENTIFIER . '(' param_list ')' ':' expr

    '('  shift, and go to state 3


state 2

    0 $accept: fn_declaration . $end

    $end  shift, and go to state 4


state 3

    1 fn_declaration: IDENTIFIER '(' . param_list ')' ':' expr

    IDENTIFIER  shift, and go to state 5

    $default  reduce using rule 2 (param_list)

    param_list  go to state 6


state 4

    0 $accept: fn_declaration $end .

    $default  accept


state 5

    3 param_list: IDENTIFIER .

    $default  reduce using rule 3 (param_list)


state 6

    1 fn_declaration: IDENTIFIER '(' param_list . ')' ':' expr
    4 param_list: param_list . ',' IDENTIFIER

    ')'  shift, and go to state 7
    ','  shift, and go to state 8


state 7

    1 fn_declaration: IDENTIFIER '(' param_list ')' . ':' expr

    ':'  shift, and go to state 9


state 8

    4 param_list: param_list ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 10


state 9

    1 fn_declaration: IDENTIFIER '(' param_list ')' ':' . expr

    IDENTIFIER  shift, and go to state 11
    LITERAL     shift, and go to state 12
    '('         shift, and go to state 13
    '!'         shift, and go to state 14

    expr           go to state 15
    additive_expr  go to state 16
    mult_expr      go to state 17
    unary_expr     go to state 18
    primary_expr   go to state 19


state 10

    4 param_list: param_list ',' IDENTIFIER .

    $default  reduce using rule 4 (param_list)


state 11

   14 primary_expr: IDENTIFIER .

    $default  reduce using rule 14 (primary_expr)


state 12

   13 primary_expr: LITERAL .

    $default  reduce using rule 13 (primary_expr)


state 13

   15 primary_expr: '(' . expr ')'

    IDENTIFIER  shift, and go to state 11
    LITERAL     shift, and go to state 12
    '('         shift, and go to state 13
    '!'         shift, and go to state 14

    expr           go to state 20
    additive_expr  go to state 16
    mult_expr      go to state 17
    unary_expr     go to state 18
    primary_expr   go to state 19


state 14

   12 unary_expr: '!' . primary_expr

    IDENTIFIER  shift, and go to state 11
    LITERAL     shift, and go to state 12
    '('         shift, and go to state 13

    primary_expr  go to state 21


state 15

    1 fn_declaration: IDENTIFIER '(' param_list ')' ':' expr .

    $default  reduce using rule 1 (fn_declaration)


state 16

    5 expr: additive_expr .
    7 additive_expr: additive_expr . '+' mult_expr
    8              | additive_expr . '-' mult_expr

    '+'  shift, and go to state 22
    '-'  shift, and go to state 23

    $default  reduce using rule 5 (expr)


state 17

    6 additive_expr: mult_expr .
   10 mult_expr: mult_expr . '*' unary_expr

    '*'  shift, and go to state 24

    $default  reduce using rule 6 (additive_expr)


state 18

    9 mult_expr: unary_expr .

    $default  reduce using rule 9 (mult_expr)


state 19

   11 unary_expr: primary_expr .

    $default  reduce using rule 11 (unary_expr)


state 20

   15 primary_expr: '(' expr . ')'

    ')'  shift, and go to state 25


state 21

   12 unary_expr: '!' primary_expr .

    $default  reduce using rule 12 (unary_expr)


state 22

    7 additive_expr: additive_expr '+' . mult_expr

    IDENTIFIER  shift, and go to state 11
    LITERAL     shift, and go to state 12
    '('         shift, and go to state 13
    '!'         shift, and go to state 14

    mult_expr     go to state 26
    unary_expr    go to state 18
    primary_expr  go to state 19


state 23

    8 additive_expr: additive_expr '-' . mult_expr

    IDENTIFIER  shift, and go to state 11
    LITERAL     shift, and go to state 12
    '('         shift, and go to state 13
    '!'         shift, and go to state 14

    mult_expr     go to state 27
    unary_expr    go to state 18
    primary_expr  go to state 19


state 24

   10 mult_expr: mult_expr '*' . unary_expr

    IDENTIFIER  shift, and go to state 11
    LITERAL     shift, and go to state 12
    '('         shift, and go to state 13
    '!'         shift, and go to state 14

    unary_expr    go to state 28
    primary_expr  go to state 19


state 25

   15 primary_expr: '(' expr ')' .

    $default  reduce using rule 15 (primary_expr)


state 26

    7 additive_expr: additive_expr '+' mult_expr .
   10 mult_expr: mult_expr . '*' unary_expr

    '*'  shift, and go to state 24

    $default  reduce using rule 7 (additive_expr)


state 27

    8 additive_expr: additive_expr '-' mult_expr .
   10 mult_expr: mult_expr . '*' unary_expr

    '*'  shift, and go to state 24

    $default  reduce using rule 8 (additive_expr)


state 28

   10 mult_expr: mult_expr '*' unary_expr .

    $default  reduce using rule 10 (mult_expr)
